Version NEXT
	Minor:
		- Added preferences screen
		- Added preferences ability to ignore the maximum number of players
		- Set the default maximum to 5, where it should be.

Version 1.32
	Minor:
		- Horses are no longer scored if you aren't playing Farmers!
		- Fixed bug whereby if you start a game, press back until the game quits, the Start Game button doesn't appear.
		- Fixed bug in German translation whereby no room scoring was occurred.
		
Version 1.31
	Minor: 
		- Graph your game history. Search by players and dates.
		- German translations generously provided by Fred Baumgarten!

Version 1.3
	Major:
		- Randomization feature:
			- Starting player (from database, or from added players)
		- Graph of scores
			- Search by all players in database
			- Search by date range
	Minor:
		- Added Expand All/Collapse All button
		- Changed score_player.xml to use R.string for numeric scoring values
		- Add Top Player and Add From Database now show game count
		- If you edit a game, then hit back, then add a player and start the game, the old game data no longer appears.
		- No longer able to edit games which have no score details (have been manually added to database)

Version 1.23
	Major:
		- fixed a brutal bug for new users where the games database table wasn't being created properly.  
	Minor:
		- Farmers of the Moor checkbox state now remembered between games
		- UI state on starting screen and scoring screen now maintained between rotation and sleep.
		

Version 1.1
	Major:
		- Support for scoring Farmers of the Moor!
		- You can now edit previously saved games! Long-press on a game in History!
		- There is now a list of all players who have played - check the menu in Add Player. You can add a player to your game from this list.
		- Shrunk background by 150kb.
	
	Minor:
		- History now sorted by date
		- Added a "game count" to the main screen
		- You can no longer rename players to an existing player name.