@@ -2,24 +2,12 @@ Future:
 	- randomization (randomize a resource, a farmyard square)
 	- get icons for all of the resources
 	- get a farm board photo. Can I draw on top of a drawable in a specific spot?
-	- more rounded corners on buttons
-	- Have to define background styles for each of the buttons states.
-	- <item name="android:background">@drawable/button</item>
-		button.xml
-		<?xml version="1.0" encoding="utf-8"?>
-		<selector xmlns:android="http://schemas.android.com/apk/res/android">
-		<item android:state_window_focused="false" android:state_enabled="true" android:drawable="@drawable/btn_default_normal_holo_light" />
-		<item android:state_window_focused="false" android:state_enabled="false" android:drawable="@drawable/btn_default_disabled_holo_light" />
-		<item android:state_pressed="true" android:drawable="@drawable/btn_default_pressed_holo_light" />
-		<item android:state_focused="true" android:state_enabled="true" android:drawable="@drawable/btn_default_focused_holo_light" />
-		<item android:state_enabled="true" android:drawable="@drawable/btn_default_normal_holo_light" />
-		<item android:state_focused="true" android:drawable="@drawable/btn_default_disabled_focused_holo_light" />
-		</selector>
 	- pre-populate based on last game? (maybe add an option for it?)
 	- make segmented control and number picker use XML for heights and text edit padding
 	- chart icon is a little brighter than it should be
 	- menu icon is for wrong theme
-	- ability to edit game date
+	- set the action bar to have a "back" button on it in some situations.
+	- set different colour of checkbox "border"
 	
 	Search:
 		- error message if you try to search with no players selected
